--- a/src/Components/AdminPage/LoginForm.module.css
+++ b/src/Components/AdminPage/LoginForm.module.css
@@ -35,11 +35,11 @@
   left: 0;
   height: 2px;
   width: 100%;
-  background: #ff69b4;
+  background: #df73ff;
 }
 .errorMessage {
-  color: #f04a4a;
-  font-size: 20px;
+  color: #4169e1;
+  font-size: 16px;
   text-align: center;
   font-weight: 600;
   margin-bottom: 3rem;
@@ -93,19 +93,22 @@
 }
 
 .errorMessage {
-  color: #f04a4a;
-  font-size: 17px;
+  color: #ffffff;
+  font-size: 16x;
   text-align: center;
-  font-weight: 600;
+  font-weight: 500;
   margin-bottom: 2rem;
   padding: 0;
+  background-color: #ee3d31;
+  padding: 10px 0px 10px 0px;
+  border-radius: 10px;
 }
 
 .input {
   flex: 1;
   padding: 1em;
   border: 0;
-  color: #8f8f8f;
+  color: #df73ff;
   font-size: 1rem;
   border-radius: 0px 10px 10px 0px;
   width: 10px;
@@ -120,7 +123,7 @@
   display: block;
   padding: 1em;
   width: 100%;
-  background: #ff69b4;
+  background: #df73ff;
   border: 0;
   color: #fff;
   cursor: pointer;
