--- a/src/Components/Layout/NewNavbar.module.css
+++ b/src/Components/Layout/NewNavbar.module.css
@@ -1,46 +1,53 @@
 @import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700");
 
+/* Általános stílusok */
+:root {
+  --primary-color: #3f51b5;
+  --primary-color-darker: #303f9f;
+}
 
-#burger-toggle {
+/* Burger menu stílusok */
+.burger-toggle {
   position: absolute;
   appearance: none;
   opacity: 0;
 }
-#burger-toggle:checked ~ .menu {
+.burger-toggle:checked ~ .menu {
   opacity: 1;
   visibility: visible;
 }
-#burger-toggle:checked ~ .menu .menu-nav-link span div,
-#burger-toggle:checked ~ .menu img,
-#burger-toggle:checked ~ .menu .title p {
+.burger-toggle:checked ~ .menu .menu-nav-link span div,
+.burger-toggle:checked ~ .menu img,
+.burger-toggle:checked ~ .menu .title p {
   transform: translateY(0);
   transition: 1.2s 0.1s cubic-bezier(0.35, 0, 0.07, 1);
 }
-#burger-toggle:checked ~ .menu .image-link:nth-child(1) img {
+.burger-toggle:checked ~ .menu .image-link:nth-child(1) img {
   transition-delay: 0.18s;
 }
-#burger-toggle:checked ~ .menu .image-link:nth-child(2) img {
+.burger-toggle:checked ~ .menu .image-link:nth-child(2) img {
   transition-delay: 0.26s;
 }
-#burger-toggle:checked ~ .menu .image-link:nth-child(3) img {
+.burger-toggle:checked ~ .menu .image-link:nth-child(3) img {
   transition-delay: 0.34s;
 }
-#burger-toggle:checked ~ .menu .image-link:nth-child(4) img {
+.burger-toggle:checked ~ .menu .image-link:nth-child(4) img {
   transition-delay: 0.42s;
 }
-#burger-toggle:checked ~ .burger-menu .line::after {
+.burger-toggle:checked ~ .burger-menu .line::after {
   transform: translateX(0);
 }
-#burger-toggle:checked ~ .burger-menu .line:nth-child(1) {
+.burger-toggle:checked ~ .burger-menu .line:nth-child(1) {
   transform: translateY(calc(var(--burger-menu-radius) / 5)) rotate(45deg);
 }
-#burger-toggle:checked ~ .burger-menu .line:nth-child(2) {
+.burger-toggle:checked ~ .burger-menu .line:nth-child(2) {
   transform: scaleX(0);
 }
-#burger-toggle:checked ~ .burger-menu .line:nth-child(3) {
+.burger-toggle:checked ~ .burger-menu .line:nth-child(3) {
   transform: translateY(calc(var(--burger-menu-radius) / -5)) rotate(-45deg);
 }
 
+/* Burger menu stílusok: .burger-menu */
 .burger-menu {
   --burger-menu-radius: 4em;
   position: fixed;
@@ -93,6 +100,7 @@
   transform: translateX(0);
 }
 
+/* Menü stílusok: .menu */
 .menu {
   position: fixed;
   top: 0;
@@ -112,115 +120,4 @@
   .menu {
     display: block;
   }
-}
-.menu-nav {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  list-style-type: none;
-}
-@media screen and (max-width: 750px) {
-  .menu-nav {
-    flex-direction: column;
-  }
-}
-.menu-nav-item {
-  flex: 1;
-}
-.menu-nav-link {
-  position: relative;
-  display: inline-flex;
-  font-size: 2rem;
-  color: white;
-  text-decoration: none;
-}
-.menu-nav-link span {
-  overflow: hidden;
-}
-.menu-nav-link span div {
-  transform: translateY(102%);
-}
-.menu-nav-link::after {
-  position: absolute;
-  content: "";
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 3px;
-  background: var(--primary-color);
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform 0.5s;
-}
-.menu-nav-link:hover::after {
-  transform: scaleX(1);
-  transform-origin: left;
-}
-.menu .gallery {
-  margin-top: 60px;
-  text-align: center;
-}
-.menu .title {
-  font-size: 24px;
-  color: white;
-  overflow: hidden;
-}
-.menu .title p {
-  font-size: 12px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  transform: translateY(102%);
-}
-.menu .images {
-  margin-top: 36px;
-  display: flex;
-  flex-wrap: wrap;
-}
-@media screen and (max-width: 750px) {
-  .menu .images {
-    justify-content: center;
-  }
-}
-.menu .images .image-link {
-  width: 15vw;
-  margin: 0 12px;
-  overflow: hidden;
-}
-@media screen and (max-width: 750px) {
-  .menu .images .image-link {
-    width: 40vw;
-    margin: 0 12px 12px 0;
-  }
-}
-.menu .images .image-link .image {
-  position: relative;
-  transition: 0.6s;
-}
-.menu .images .image-link .image::before {
-  position: absolute;
-  content: attr(data-label);
-  top: 0;
-  left: 0;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  color: white;
-  background: rgba(0, 0, 0, 0.6);
-  opacity: 0;
-  transition: 0.4s;
-}
-.menu .images .image-link:hover .image {
-  transform: scale(1.2);
-}
-.menu .images .image-link:hover .image::before {
-  opacity: 1;
-}
-.menu .images img {
-  height: 250px;
-  transform: translateY(102%);
 }
