--- a/src/Components/UI/Slider/Slider.module.css
+++ b/src/Components/UI/Slider/Slider.module.css
@@ -16,7 +16,7 @@
   /*Loader Bar*/
   --loader-bar-color: #54467c;
   --loader-bar-height: 2px;
-  margin-top: 4rem;
+  /*margin-top: 4rem;*/
 
   background-color: black;
 }
