--- a/src/Components/ParallaxIntroductorySection/IntroductorySection.module.css
+++ b/src/Components/ParallaxIntroductorySection/IntroductorySection.module.css
@@ -21,7 +21,7 @@
     align-items: center; 
     height: 100vh;
     color: white;
-    font-size: 2.5rem;
+    font-size: 2.5rem;  
     font-family: 'Sorts Mill Goudy', serif;
   }
 
@@ -49,5 +49,76 @@
     margin-bottom: 20px;
     margin: 0px 100px 0px 100px;
     font-family: 'Sorts Mill Goudy', serif;
+  }
+
+ /* Mobil eszközök (kis képernyő) */
+@media only screen and (max-width: 400px) {
+    .introductoryText{
+        text-align: center;
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        height: 50vh;
+        color: black;
+        font-size: 1.2rem;
+        line-height: 1.6;
+        color: #333;
+        margin-bottom: 10px;
+        margin: 0px 20px 0px 20px;
+        font-family: 'Sorts Mill Goudy', serif;
+      }
+      .centeredText {
+        text-align: center;
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        height: 100vh;
+        color: white;
+        font-size: 2.5rem;  
+        font-family: 'Sorts Mill Goudy', serif;
+      }
+  } 
+  
+/* Mobil eszközök (kis képernyő) */
+@media only screen and (min-width: 401px) and (max-width: 767px) {
+    .introductoryText{
+        text-align: center;
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        height: 50vh;
+        color: black;
+        font-size: 1.4rem;
+        line-height: 1.6;
+        color: #333;
+        margin-bottom: 10px;
+        margin: 0px 20px 0px 20px;
+        font-family: 'Sorts Mill Goudy', serif;
+      }
+      .centeredText {
+        text-align: center;
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        height: 50vh;
+        color: white;
+        font-size: 2.5rem;  
+        font-family: 'Sorts Mill Goudy', serif;
+      }
+  }
+  
+  /* Tablet eszközök (közepes képernyő) */
+  @media only screen and (min-width: 768px) and (max-width: 991px) {
+
+  }
+  
+  /* Kisebb asztali és laptop kijelzők */
+  @media only screen and (min-width: 992px) and (max-width: 1199px) {
+
+  }
+  
+  /* Nagyobb asztali kijelzők és TV-k */
+  @media only screen and (min-width: 1200px) {
+
   }
   
