--- a/src/Components/Layout/CurtainMenu.module.css
+++ b/src/Components/Layout/CurtainMenu.module.css
@@ -6,7 +6,7 @@
     position: fixed; /* Stay in place */
     z-index: 10000; /* Sit on top */
     left: 0;
-    top: 0;
+    top: 10%;
     background-color: rgb(0,0,0); /* Black fallback color */
     background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
     overflow-x: hidden; /* Disable horizontal scroll */
@@ -17,10 +17,10 @@
   /* Position the content inside the overlay */
   .overlayContent {
     position: relative;
-    top: 25%; /* 25% from the top */
+    top: 15%; /* 25% from the top */
     width: 100%; /* 100% width */
     text-align: center; /* Centered text/links */
-    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+    margin-top: 10px; /* 30px top margin to avoid conflict with the close button on smaller screens */
   }
   
   /* The navigation links inside the overlay */
@@ -41,7 +41,7 @@
   /* Position the close button (top right corner) */
   .overlay .closebtn {
     position: absolute;
-    top: 20px;
+    top: 0px;
     right: 45px;
     font-size: 60px;
   }
@@ -51,7 +51,7 @@
     .overlay a {font-size: 20px}
     .overlay .closebtn {
       font-size: 40px;
-      top: 15px;
+      top: 0px;
       right: 35px;
     }
   }
