--- a/src/Components/Layout/Header.module.css
+++ b/src/Components/Layout/Header.module.css
@@ -9,9 +9,9 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     color: #1f1e1d;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-    padding: 0 10%;
+
     opacity: 100%;
     z-index: 20;
     transition: transform 0.3s ease-in-out; 
@@ -131,7 +131,7 @@
   @media only screen and (max-width: 1100px) {
     .header {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-end;
       z-index: 50;
     }
 
