--- a/src/Components/BurgerButton/BurgerButton.css
+++ b/src/Components/BurgerButton/BurgerButton.css
@@ -6,7 +6,7 @@
 
 .burger-bar {
     width: 2.5rem;
-    height: 0.2em;
+    height: 0.2rem;
     background-color: #1f1e1d;
     border-radius: 0.5em;
     margin: 0.5rem;
@@ -20,7 +20,7 @@
 }
 
 .burger-bar.clicked:nth-child(2){
-    transform: scale(0.1);
+    transform: scale(0);
     transition: ease-out 0.5s;
 }
 
@@ -31,7 +31,7 @@
 
 /* unclicked */
 .burger-bar.unclicked {
-    transform: rotate(0) translate(0);
+    transform: rotate(0.9deg) translate(0);
     transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
 }
 
