--- a/src/Components/ScrollToTopButton/ScrollToTopButton.module.css
+++ b/src/Components/ScrollToTopButton/ScrollToTopButton.module.css
@@ -6,12 +6,12 @@
   }
   
   .scrollToTopButton {
-    background-color: #23967F;
+    background-color: rgb(33, 37, 40, 0.8);
     border: none;
     color: white;
     cursor: pointer;
     font-size: 24px;
-    padding: 10px 12px;
+    padding: 8px 12px;
     border-radius: 50%;
     opacity: 0.7;
     outline: none;
