--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -64,8 +64,23 @@
   
   /* Medium devices (tablets) */
   @media only screen and (min-width: 601px) and (max-width: 960px) {
+    .text{
+      font-size: 1.6rem !important;
+      margin: 40px 0px 40px 0px;
+      text-align: center !important;
+      line-height: 1.6;
+      font-family: 'Sorts Mill Goudy', serif;
+      color: #333;
+      min-width: 300px;
+    }
+    .h1Text{
+      margin-left: 30% !important;
+    }
   }
   
   /* Large devices (desktops) */
   @media only screen and (min-width: 961px) {
+    .h1Text{
+      margin-left: 50% !important;
+    }
   }
