--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -22,6 +22,27 @@
     border-radius: 0 0px 0px 0px;
   }
 
+  @keyframes fadeInFromTop {
+    0% {
+      opacity: 0;
+      transform: translateY(-50px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+
+.h1Text {
+  animation: fadeInFromTop 0.5s ease-in-out forwards;
+}
+
+.text{
+  animation: fadeInFromTop 1.5s ease-in-out forwards;
+}
+
+
   /* Small devices (mobile phones) */
 @media only screen and (max-width: 600px) {
     .wrapper{
@@ -71,10 +92,44 @@
       line-height: 1.6;
       font-family: 'Sorts Mill Goudy', serif;
       color: #333;
-      min-width: 300px;
+      
     }
     .h1Text{
-      margin-left: 30% !important;
+      margin-left: 10% !important;
+      margin-right: -40%;
+    }
+    .image {
+      max-width: 80%;
+      max-height: 80%;
+    }
+    .h1TextBox{
+      justify-content: start !important;
+      display: flex !important;
+      flex: 1 !important;
+    }
+    .svgArrow{
+      display: none;
+    } 
+    .image-container {
+      flex: 2;
+      background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+      display: flex;
+      justify-content: end;
+    }
+    .text{
+      font-size: 1.5rem !important;
+      margin: 40px 0px 40px 0px;
+      text-align: right !important;
+      line-height: 1.2;
+      margin-left: 10%;
+    }
+    .h1Text{
+      font-size: 4rem !important;
+      text-align: right !important;
+      margin-left: 0% !important;
+      max-width: auto;
+      color: #333;
+      margin-top: 10%;
     }
   }
   
