--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -40,102 +40,160 @@
 
 .text{
   animation: fadeInFromTop 1.5s ease-in-out forwards;
+
 }
 
 
-  /* Small devices (mobile phones) */
-@media only screen and (max-width: 600px) {
-    .wrapper{
-        display: block;
-    }
-    .image-container {
-        flex: 2;
-        background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        max-height: 100vh;
-      }
-      .image {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: cover;
-        filter: brightness(0.9);
-        border-radius: 0 0px 0px 0px;
-      }
-      .h1Text{
-        font-size: 3rem !important;
-        text-align: center !important;
-        margin-left: 0 !important;
-        max-width: auto;
-        color: #333;
-      }
-      .svgArrow{
-        display: none;
-      }
-      .text{
-        font-size: 1.6rem !important;
-        margin: 40px 20px 40px 20px;
-        text-align: center !important;
-        line-height: 1.6;
-        font-family: 'Sorts Mill Goudy', serif;
-        color: #333;
-      }
+  /* Extra kicsi (Extra Small - xs) */
+@media (max-width: 575.98px) {
+  .wrapper{
+    display: block;
 }
-  
-  /* Medium devices (tablets) */
-  @media only screen and (min-width: 601px) and (max-width: 960px) {
-    .text{
-      font-size: 1.6rem !important;
-      margin: 40px 0px 40px 0px;
-      text-align: center !important;
-      line-height: 1.6;
-      font-family: 'Sorts Mill Goudy', serif;
-      color: #333;
-      
-    }
-    .h1Text{
-      margin-left: 10% !important;
-      margin-right: -40%;
-    }
-    .image {
-      max-width: 80%;
-      max-height: 80%;
-    }
-    .h1TextBox{
-      justify-content: start !important;
-      display: flex !important;
-      flex: 1 !important;
-    }
-    .svgArrow{
-      display: none;
-    } 
-    .image-container {
-      flex: 2;
-      background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
-      display: flex;
-      justify-content: end;
-    }
-    .text{
-      font-size: 1.5rem !important;
-      margin: 40px 0px 40px 0px;
-      text-align: right !important;
-      line-height: 1.2;
-      margin-left: 10%;
-    }
-    .h1Text{
-      font-size: 4rem !important;
-      text-align: right !important;
-      margin-left: 0% !important;
-      max-width: auto;
-      color: #333;
-      margin-top: 10%;
-    }
+.image-container {
+    flex: 2;
+    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 100vh;
   }
-  
-  /* Large devices (desktops) */
-  @media only screen and (min-width: 961px) {
-    .h1Text{
-      margin-left: 50% !important;
-    }
+  .image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    filter: brightness(0.9);
+    border-radius: 0 0px 0px 0px;
   }
+  .h1Text{
+    font-size: 3rem !important;
+    text-align: center !important;
+    margin-left: 0 !important;
+    max-width: auto;
+    color: #333;
+  }
+  .svgArrow{
+    display: none;
+  }
+  .text{
+    font-size: 1.6rem !important;
+    margin: 40px 20px 40px 20px;
+    text-align: center !important;
+    line-height: 1.6;
+    font-family: 'Sorts Mill Goudy', serif;
+    color: #333;
+  }
+}
+
+/* Kicsi (Small - sm) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .text{
+    font-size: 1.6rem !important;
+    margin: 40px 0px 40px 0px;
+    text-align: center !important;
+    line-height: 1.6;
+    font-family: 'Sorts Mill Goudy', serif;
+    color: #333;
+    
+  }
+  .h1Text{
+    margin-left: 10% !important;
+    margin-right: -40%;
+  }
+  .image {
+    max-width: 80%;
+    max-height: 80%;
+  }
+  .h1TextBox{
+    justify-content: start !important;
+    display: flex !important;
+    flex: 1 !important;
+  }
+  .svgArrow{
+    display: none;
+  } 
+  .image-container {
+    flex: 2;
+    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    display: flex;
+    justify-content: end;
+  }
+  .text{
+    font-size: 1.5rem !important;
+    margin: 40px 0px 40px 0px;
+    text-align: right !important;
+    line-height: 1.2;
+    margin-left: 10%;
+  }
+  .h1Text{
+    font-size: 4rem !important;
+    text-align: right !important;
+    margin-left: 0% !important;
+    max-width: auto;
+    color: #333;
+    margin-top: 10%;
+  }
+}
+
+/* Közepes (Medium - md) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .text{
+    font-size: 1.6rem !important;
+    margin: 40px 0px 40px 0px;
+    text-align: center !important;
+    line-height: 1.6;
+    font-family: 'Sorts Mill Goudy', serif;
+    color: #333;
+    
+  }
+  .h1Text{
+    margin-left: 10% !important;
+    margin-right: -40%;
+  }
+  .image {
+    max-width: 80%;
+    max-height: 80%;
+  }
+  .h1TextBox{
+    justify-content: start !important;
+    display: flex !important;
+    flex: 1 !important;
+  }
+  .svgArrow{
+    display: none;
+  } 
+  .image-container {
+    flex: 2;
+    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    display: flex;
+    justify-content: end;
+  }
+  .text{
+    font-size: 1.5rem !important;
+    margin: 40px 0px 40px 0px;
+    text-align: right !important;
+    line-height: 1.2;
+    margin-left: 10%;
+  }
+  .h1Text{
+    font-size: 4rem !important;
+    text-align: right !important;
+    margin-left: 0% !important;
+    max-width: auto;
+    color: #333;
+    margin-top: 10%;
+  }
+
+/* Nagy (Large - lg) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .h1Text{
+    margin-left: 50% !important;
+  }
+}
+
+/* Extra nagy (Extra Large - xl) */
+@media (min-width: 1200px) {
+  .h1Text{
+    margin-left: 20% !important;
+  }
+}
+}
