--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -44,7 +44,7 @@
 }
 
 
-  /* Extra kicsi (Extra Small - xs) */
+/* Extra kicsi készülékek (telefonok, 576px és alatt) */
 @media (max-width: 575.98px) {
   .wrapper{
     display: block;
@@ -84,7 +84,7 @@
   }
 }
 
-/* Kicsi (Small - sm) */
+/* Kicsi készülékek (tabletek, 576px és 767px között) */
 @media (min-width: 576px) and (max-width: 767.98px) {
   .text{
     font-size: 1.6rem !important;
@@ -134,17 +134,9 @@
   }
 }
 
-/* Közepes (Medium - md) */
+/* Közepes készülékek (tabletek, 768px és 991px között) */
 @media (min-width: 768px) and (max-width: 991.98px) {
-  .text{
-    font-size: 1.6rem !important;
-    margin: 40px 0px 40px 0px;
-    text-align: center !important;
-    line-height: 1.6;
-    font-family: 'Sorts Mill Goudy', serif;
-    color: #333;
-    
-  }
+
   .h1Text{
     margin-left: 10% !important;
     margin-right: -40%;
@@ -160,6 +152,50 @@
   }
   .svgArrow{
     display: none;
+    margin-bottom: -40px !important;
+    margin-left: 0% !important;
+  } 
+  .image-container {
+    flex: 2;
+    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    display: flex;
+    justify-content: end;
+  }
+  .text{
+    font-size: 1.2rem !important;
+    margin: 40px 0px 40px 0px;
+    text-align: center !important;
+    line-height: 1.2;
+    margin-left: 0%;
+    min-width: 300px;
+  }
+  .h1Text{
+    font-size: 3.5rem !important;
+    text-align: center !important;
+    margin-left: 40% !important;
+    max-width: auto;
+    color: #333;
+    margin-top: 10%;
+    min-width: 300px !important;
+  }
+}
+
+/* Nagy készülékek (asztali gépek, 992px és 1199px között) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+
+  .image {
+    max-width: 80%;
+    max-height: 80%;
+  }
+  .h1TextBox{
+    justify-content: start !important;
+    display: flex !important;
+    flex: 1 !important;
+  }
+  .svgArrow{
+    display: block;
+    margin-bottom: -40px !important;
+    margin-left: 0% !important;
   } 
   .image-container {
     flex: 2;
@@ -169,31 +205,114 @@
   }
   .text{
     font-size: 1.5rem !important;
-    margin: 40px 0px 40px 0px;
-    text-align: right !important;
+    margin: 40px 0px 40px 0px !important;
+    text-align: center !important;
     line-height: 1.2;
-    margin-left: 10%;
+    margin-left: 0%;
+    min-width: 350px;
   }
   .h1Text{
     font-size: 4rem !important;
-    text-align: right !important;
-    margin-left: 0% !important;
+    text-align: center !important;
+    margin-left: 40% !important;
     max-width: auto;
     color: #333;
     margin-top: 10%;
-  }
-
-/* Nagy (Large - lg) */
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .h1Text{
-    margin-left: 50% !important;
+    min-width: 350px !important;
   }
 }
 
-/* Extra nagy (Extra Large - xl) */
-@media (min-width: 1200px) {
-  .h1Text{
-    margin-left: 20% !important;
+/* Extra nagy készülékek (asztali gépek, 1200px és afölött) */
+@media (min-width: 1200px) and (max-width: 1600px) {
+
+  .image {
+    max-width: 80%;
+    max-height: 80%;
   }
+  .h1TextBox{
+    justify-content: start !important;
+    display: flex !important;
+    flex: 1 !important;
+  }
+  .svgArrow{
+    display: block;
+    margin-bottom: 0px !important;
+    margin-left: 0% !important;
+  } 
+  .image-container {
+    flex: 2;
+    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    display: flex;
+    justify-content: end;
+  }
+  .text{
+    font-size: 1.4rem !important;
+    margin: 40px 0px 40px 0px !important;
+    text-align: center !important;
+    line-height: 1.2;
+    margin-left: 0%;
+    min-width: 450px;
+  }
+  .h1Text{
+    font-size: 4rem !important;
+    text-align: center !important;
+    margin-left: 40% !important;
+    max-width: auto;
+    color: #333;
+    margin-top: 10%;
+    min-width: 450px !important;
+  }
+  
 }
+
+/* Extra nagy készülékek (asztali gépek, 1601px és afölött) */
+@media (min-width: 1601px) {
+  .text{
+    font-size: 1.6rem !important;
+    margin: 40px 0px 40px 0px !important;
+    text-align: center !important;
+    line-height: 1.6;
+    font-family: 'Sorts Mill Goudy', serif;
+    color: #333;
+    
+  }
+
+  .image {
+    max-width: 90%;
+    max-height: 90%;
+  }
+  .h1TextBox{
+    justify-content: start !important;
+    display: flex !important;
+    flex: 1 !important;
+  }
+  .svgArrow{
+    display: block;
+    margin-bottom: 0px !important;
+    margin-left: 10% !important;
+  } 
+  .image-container {
+    flex: 2;
+    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    display: flex;
+    justify-content: end;
+  }
+  .text{
+    font-size: 2rem !important;
+    margin: 40px 0px 40px 0px !important;
+    text-align: center !important;
+    line-height: 1.2;
+    margin-left: 0%;
+    min-width: 500px;
+  }
+  .h1Text{
+    font-size: 5rem !important;
+    text-align: center !important;
+    margin-left: 70% !important;
+    max-width: auto;
+    color: #333;
+    margin-top: 10%;
+    min-width: 500px !important;
+  }
+  
 }
