--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -49,27 +49,12 @@
   .wrapper{
     display: block;
 }
-.image-container {
-    flex: 2;
-    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-height: 100vh;
-  }
-  .image {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    filter: brightness(0.9);
-    border-radius: 0 0px 0px 0px;
-  }
   .h1Text{
     font-size: 3rem !important;
     text-align: center !important;
     margin-left: 0 !important;
     max-width: auto;
-    color: #333;
+    color: rgb(66, 65, 63);
   }
   .svgArrow{
     display: none;
@@ -80,7 +65,15 @@
     text-align: center !important;
     line-height: 1.6;
     font-family: 'Sorts Mill Goudy', serif;
-    color: #333;
+    color:  rgb(66, 65, 63);
+  }
+  .image-container {
+    flex: 2;
+    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 100vh;
   }
 }
 
