--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -11,6 +11,10 @@
     justify-content: center;
     align-items: center;
     max-height: 100vh;
+    background-image: url('../../Assets/CakesPicture/splashbackground.png');
+    background-position: center center;
+    background-size: 100%;
+    background-repeat: no-repeat;
   }
 
   .image-containerMoblie{
@@ -77,7 +81,10 @@
   .image-containerMoblie{
     display: block;
     flex: 2;
-    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    background-image: url('../../Assets/CakesPicture/splashbackgroundMobile.png');
+    background-position: center center;
+    background-size: 100%;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -114,7 +121,10 @@
   } 
   .image-container {
     flex: 2;
-    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    background-image: url('../../Assets/CakesPicture/splashbackground.png');
+    background-position: center center;
+    background-size: 100%;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: end;
   }
@@ -158,7 +168,10 @@
   } 
   .image-container {
     flex: 2;
-    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    background-image: url('../../Assets/CakesPicture/splashbackground.png');
+    background-position: center center;
+    background-size: 100%;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: end;
   }
@@ -200,7 +213,10 @@
   } 
   .image-container {
     flex: 2;
-    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    background-image: url('../../Assets/CakesPicture/splashbackground.png');
+    background-position: center center;
+    background-size: 100%;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: end;
   }
@@ -242,9 +258,12 @@
   } 
   .image-container {
     flex: 2;
-    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    background-image: url('../../Assets/CakesPicture/splashbackground.png');
     display: flex;
     justify-content: end;
+    background-position: center center;
+    background-size: 100%;
+    background-repeat: no-repeat;
   }
   .text{
     font-size: 1.4rem !important;
@@ -294,7 +313,11 @@
   } 
   .image-container {
     flex: 2;
-    background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);
+    /*background: linear-gradient(to bottom, rgb(236, 141, 147) 80%, rgb(255, 255, 255, 0) 20%);*/
+    background-image: url('../../Assets/CakesPicture/splashbackground.png');
+    background-position: center center;
+    background-size: 100%;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: end;
   }
