--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -15,6 +15,7 @@
     background-position: center center;
     background-size: 100%;
     background-repeat: no-repeat;
+    margin-top: 2rem;
   }
 
   .image-containerMoblie{
@@ -173,7 +174,9 @@
     background-size: 100%;
     background-repeat: no-repeat;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    padding-left: 15%;
+    height: 50vh;
   }
   .text{
     font-size: 1.2rem !important;
@@ -218,8 +221,9 @@
     background-size: 100%;
     background-repeat: no-repeat;
     display: flex;
-    justify-content: flex-end;
-    padding-right: 5%;
+    justify-content: center;
+    padding-left: 15%;
+    height: 40vh;
   }
   .text{
     font-size: 1.5rem !important;
@@ -261,11 +265,12 @@
     flex: 2;
     background-image: url('../../Assets/CakesPicture/splashbackground.png');
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background-position: center center;
     background-size: 100%;
     background-repeat: no-repeat;
-    padding-right: 10%;
+    padding-left: 15%;
+    height: 100vh;
   }
   .text{
     font-size: 1.4rem !important;
@@ -321,8 +326,9 @@
     background-size: 100%;
     background-repeat: no-repeat;
     display: flex;
-    justify-content: flex-end;
-    padding-right: 10%;
+    justify-content: center;
+    padding-left: 15%;
+    height: 100vh;
   }
   .text{
     font-size: 2rem !important;
