--- a/src/Components/PhotoGallery/CardGallery.module.css
+++ b/src/Components/PhotoGallery/CardGallery.module.css
@@ -20,9 +20,22 @@
 }
 
 .cardBodyNext:hover {
-    background-color: rgba(255, 0, 0, 0.5); /* Példa: vörös átlátszó hátterű szín */
+    
     transform: translateY(-4px);
   }
+
+  .cardText{
+    display: flex;
+    align-items: center;
+  }
+
+  .cardText {
+    transition: color 0.3s ease; /* Az animáció az színváltozás 0.3 másodpercig tart, és könnyűvé teszi az átmenetet */
+}
+
+.cardBodyNext:hover .cardText {
+    color: rgba(255, 0, 0, 0.5); /* A kártya szövegének színe a hover-re */
+}
 
 
 /* Extra kicsi készülékek (telefonok, 576px és alatt) */
