--- a/src/Components/ParallaxIntroductorySection/IntroductorySection.module.css
+++ b/src/Components/ParallaxIntroductorySection/IntroductorySection.module.css
@@ -34,6 +34,7 @@
     height: 100vh;
     color: white;
     font-size: 3rem;
+    font-weight: 400;
     font-family: 'Sorts Mill Goudy', serif;
   }
 
