--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -87,89 +87,81 @@
   }
   
 
+  /* Extra kicsi készülékek (telefonok, 576px és alatt) */
+@media (max-width: 575.98px) {
+  .section{
+    height: 100%;
+  }
+  .pictureBox{
+    display: none;
+  }
+  .divider{
+    display: none;
+  }
+  .mobileCardSlider{
+    display: block;
+    background-color: rgb(56, 53, 53);
+    padding-top: 10px;
+    padding-bottom: 60px;
+    overflow: hidden;
+  }
+  .underline {
+    margin-top: -20px;
+    margin-bottom: 40px;
+    border: none;
+    height: 3px;
+    background-color: #FF69B4;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .DesktopSlider{
+    display: none;
+  }
+  .arrowIcon {
+    bottom: 0;
+    right: 0;
+    color: white;
+    animation: arrowAnimation 1s infinite alternate;
+    font-size: 30px;
+  }
+  
+  @keyframes arrowAnimation {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(20px);
+    }
+  }
+}
 
-  @media only screen and (max-width: 600px) {
-    .pictureBox{
-      display: none;
-    }
-    .divider{
-      display: none;
-    }
-    .mobileCardSlider{
-      display: block;
-      background-color: rgb(56, 53, 53);
-      padding-top: 10px;
-      padding-bottom: 60px;
-      overflow: hidden;
-    }
-    .underline {
-      margin-top: -20px;
-      margin-bottom: 40px;
-      border: none;
-      height: 3px;
-      background-color: #FF69B4;
-      width: 40%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .DesktopSlider{
-      display: none;
-    }
-    .arrowIcon {
-      bottom: 0;
-      right: 0;
-      color: white;
-      animation: arrowAnimation 1s infinite alternate;
-      font-size: 30px;
-    }
-    
-    @keyframes arrowAnimation {
-      0% {
-        transform: translateX(0);
-      }
-      100% {
-        transform: translateX(20px);
-      }
-    }
-    
+/* Kicsi készülékek (tabletek, 576px és 767px között) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+}
+
+/* Közepes készülékek (tabletek, 768px és 991px között) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .section{
+    height: 100%;
   }
+}
+
+/* Nagy készülékek (asztali gépek, 992px és 1199px között) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+
+}
+
+/* Extra nagy készülékek (asztali gépek, 1200px és afölött) */
+@media (min-width: 1200px) and (max-width: 1600px) {
   
-  /* Medium devices (tablets) */
-  @media only screen and (min-width: 601px) and (max-width: 960px) {
-    .pictureBox{
-      display: none;
-    }
-    .divider{
-      display: none;
-    }
-    .underline {
-      margin-top: -20px;
-      margin-bottom: 40px;
-      border: none;
-      height: 3px;
-      background-color: #FF69B4;
-      width: 20%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .quote {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 30vh;
-      font-family: "Georgia", serif;
-      font-style: italic;
-      font-size: 30px;
-      line-height: 1.5;
-      text-align: center;
-      background-color: white;
-    }
-  }
-  
-  /* Large devices (desktops) */
-  @media only screen and (min-width: 961px) {
-    
-  }
+}
+
+/* Extra nagy készülékek (asztali gépek, 1601px és afölött) */
+@media (min-width: 1601px) {
+ 
+}
   
   
   
