--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -30,7 +30,6 @@
     max-width: 100%;
     max-height: 90%;
     object-fit: cover;
-    filter: brightness(0.9);
     border-radius: 0 0px 0px 0px;
   }
 
@@ -313,7 +312,8 @@
     line-height: 1.6;
     font-family: 'Sorts Mill Goudy', serif;
     color: #333;
-    
+    margin-left: 0%;
+    min-width: 500px;
   }
 
   .image {
@@ -339,26 +339,23 @@
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
-    padding-left: 15%;
+    padding-left: 0%;
     height: 100vh;
     overflow: visible;
   }
-  .text{
-    font-size: 2rem !important;
-    margin: 40px 0px 40px 0px !important;
-    text-align: center !important;
-    line-height: 1.2;
-    margin-left: 0%;
-    min-width: 500px;
-  }
+
   .h1Text{
     font-size: 5rem !important;
     text-align: center !important;
-    margin-left: 60% !important;
+    margin-left: 30% !important;
     max-width: auto;
     color: #333;
     margin-top: 10%;
-    min-width: 600px !important;
+    min-width: 700px !important;
   }
-  
+  .wrapper{
+    display: flex;
+    height: auto;
+    overflow: visible !important;
+}
 }
